syntax = "proto3";
import "im.proto";

package pbs;

message TokenAuthReq {
    MsgAuth message = 1;
}
message TokenAuthResp {
    bool statu = 1;
}

message MessageReceiveReq {
    MsgItem message = 1;
}
message MessageReceiveResp {
}

message MessageACKReq {
    string message_id = 1;
}
message MessageACKResp {
}

message MessageSyncReq {
    int64 user_id = 1;
    string message_id = 2;
}
message MessageSyncResp {
}

service LogicInit {
    // 获取消息ID

    // token 连接认证
    rpc TokenAuth (TokenAuthReq) returns (TokenAuthResp);

    // 消息接收
    rpc MessageReceive (MessageReceiveReq) returns (MessageReceiveResp);

    // 消息回执
    rpc MessageACK (MessageACKReq) returns (MessageACKResp);

    // 消息同步
    rpc MessageSync (MessageSyncReq) returns (MessageSyncResp);

    // 设备退出
}
